# Kira

./: .gitignore  GEMINI.md  Kira.spec  SHIPPING.md  architecture.md  build.py  description.txt  main.py  pyproject.toml  readme.md  repl.py  requirements.txt  run_gui.py  run_repl.py  run_tests.py
examples/core/: 01_kcontext.py  02_kdata.py  03_knode.py
examples/interpreter/: 01_eval_expressions.py  02_eval_workflow.py
examples/language/: 01_tokenizer.py  02_parser.py
gui/: GUI_ARCHITECTURE.md  commands.py  homepage.py  kproject.py  main_window.py  qt_project.py  style.py  style_system.py  table_tab.py  verify_new_ui.py  verify_node_editor.py
gui/components/: activity_bar.py  add_variable_dialog.py  bottom_panel.py  data_view.py  node_editor.py  node_items.py  repl_console.py  sidebar.py  step_editor.py  title_bar.py  workflow_editor.py
gui/panels/: __init__.py  explorer_panel.py  preview_card.py  preview_panel.py  transformations_panel.py  workflow_editor_panel.py
gui/previews/: literal_preview.py
gui/utils/: colors.py  font_utils.py  svg_utils.py
gui_test/: README.md  __init__.py  homepage.py  styles.py  workflow_tab.py
gui_test/panels/: control_panel.py  explorer_panel.py
gui_test/previews/: __init__.py  base_preview.py  error_preview.py  (+2 more)
kira/: __init__.py
klogging/: klogging.py
kproject/: agent_context.md  architecture.md  kdependency_manager.py  kevaluator.py  kevent.py  kmanager.py  kpersistence_manager.py  kproject.py  kstate_manager.py  kstatus_bus.py
repl/: __init__.py  repl_backend.py  repl_cli.py
tests/: TESTING_STRATEGY.md
(+39 files in other folders)
