[project]
name = "kira"
version = "0.1.0"
description = "Kira - The Reactive Data Preparation Platform"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scipy>=1.8.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.4.0",
    "pytest>=7.4.0",
]
